deploy/kustomize/filter/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: filter
  labels:
    app.kubernetes.io/name: filter
    app.kubernetes.io/component: mail
    app.kubernetes.io/part-of: docker-mailserver
spec:
  serviceName: filter
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: filter
      app.kubernetes.io/component: mail
      app.kubernetes.io/part-of: docker-mailserver
  template:
    metadata:
      labels:
        app.kubernetes.io/name: filter
        app.kubernetes.io/component: mail
        app.kubernetes.io/part-of: docker-mailserver
    spec:
      automountServiceAccountToken: false
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: filter
                    app.kubernetes.io/component: mail
                    app.kubernetes.io/part-of: docker-mailserver
                topologyKey: kubernetes.io/hostname
              weight: 1
      containers:
        - name: rspamd
          image: jeboehm/mailserver-filter:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: controller
              containerPort: 11334
              protocol: TCP
            - name: worker
              containerPort: 11332
              protocol: TCP
          livenessProbe:
            exec:
              command:
                - /usr/local/bin/healthcheck.sh
            initialDelaySeconds: 45
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /
              port: controller
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
            successThreshold: 1
          resources:
            requests:
              cpu: 50m
              memory: 192Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsUser: 11333
            runAsGroup: 11333
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: filter-data
              mountPath: /var/lib/rspamd
      securityContext:
        fsGroup: 11333
        fsGroupChangePolicy: OnRootMismatch
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: tmp
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: filter-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 5Gi
  updateStrategy:
    type: RollingUpdate
